--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.17",
+    "storyblok-rich-text-react-renderer": "^2.6.1",
     "tailwindcss": "^3.1.8"
   }
 }
