--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
+    "@types/node": "18.8.3",
+    "@types/react": "18.0.21",
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.17",
     "storyblok-rich-text-react-renderer": "^2.6.1",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "typescript": "4.8.4"
   }
 }
