--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@storyblok/react": "^1.3.2",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.5",
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
     "react": "18.2.0",
